# RowingTrainingManager

./: CMakeLists.txt  README.MD  RowingManager_FullSpec.docx  RowingManager_FunctionalSpec.docx  shell.nix  todo.txt
src/: assignment.cpp  assignment.h  assignmentdialog.cpp  assignmentdialog.h  assignmentgenerator.cpp  assignmentgenerator.h  assignmentviewdialog.cpp  assignmentviewdialog.h  boat.cpp  boat.h  boatlistsdialog.cpp  boatlistsdialog.h  boattablemodel.cpp  boattablemodel.h  chartwidgets.cpp  chartwidgets.h  databasemanager.cpp  databasemanager.h  main.cpp  mainwindow.cpp  mainwindow.h  printerdevice.cpp  printerdevice.h  rower.cpp  rower.h  rowerlistsdialog.cpp  rowerlistsdialog.h  rowertablemodel.cpp  rowertablemodel.h  teamselectdialog.cpp  teamselectdialog.h
